<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddEmployeeViewController" customModule="MuyEmployees" customModuleProvider="target">
            <connections>
                <outlet property="textFieldName" destination="5sq-Hb-Zji" id="Yvw-lA-yWq"/>
                <outlet property="textFieldPosition" destination="nQX-Wn-iGm" id="fop-5I-1tf"/>
                <outlet property="textFieldWage" destination="j7l-RU-A2H" id="Oyc-FG-pV9"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="65w-lW-iB5">
                    <rect key="frame" x="16" y="44" width="382" height="200"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5sq-Hb-Zji">
                            <rect key="frame" x="0.0" y="0.0" width="382" height="61.5"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Cargo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nQX-Wn-iGm">
                            <rect key="frame" x="0.0" y="69.5" width="382" height="61"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Salario" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j7l-RU-A2H">
                            <rect key="frame" x="0.0" y="138.5" width="382" height="61.5"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="height" constant="200" id="ayW-QO-Jzg"/>
                    </constraints>
                </stackView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8s2-gc-Phr">
                    <rect key="frame" x="16" y="766" width="382" height="80"/>
                    <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="80" id="FCt-e5-erc"/>
                    </constraints>
                    <color key="tintColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                    <state key="normal" title="Añadir"/>
                    <connections>
                        <action selector="actionAddEmployee:" destination="-1" eventType="touchUpInside" id="SpT-Lr-xdO"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
            <constraints>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8s2-gc-Phr" secondAttribute="trailing" constant="16" id="AAb-57-f4B"/>
                <constraint firstItem="65w-lW-iB5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Dxr-Nc-Jgt"/>
                <constraint firstItem="8s2-gc-Phr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Ovk-8Y-0DI"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="8s2-gc-Phr" secondAttribute="bottom" constant="16" id="r7u-IQ-Mdy"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="65w-lW-iB5" secondAttribute="trailing" constant="16" id="t4c-aK-add"/>
                <constraint firstItem="65w-lW-iB5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="y50-Fy-i5T"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <point key="canvasLocation" x="68" y="86"/>
        </view>
    </objects>
</document>
