...
                            <constraint firstItem="JPe-dg-2RW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XXe-3l-QXu"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JPe-dg-2RW" secondAttribute="trailing" id="akS-pm-vB8"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JPe-dg-2RW" secondAttribute="bottom" id="oH7-mg-8jD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Colaboradores" id="ky0-1H-oWK">
                        <barButtonItem key="rightBarButtonItem" style="plain" id="ygo-TG-6mS">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="VY2-vZ-drb">
                                <rect key="frame" x="376" y="11" width="18" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="plus" catalog="system"/>
                                <connections>
                                    <action selector="actionAddEmployee:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rjq-2W-3ZI"/>
                                </connections>
                            </button>
                        </barButtonItem>
                    </navigationItem>
...
