...
    }
    
    //MARK: Init Listeners
    
    func initListener(){
        viewModel.employedAdded = {
            let banner = NotificationBanner(title: "Genial!", subtitle: "Has agregado un nuevo colaborador", style: .success)
            banner.backgroundColor = .systemGreen
            banner.show()
            SVProgressHUD.dismiss()
            self.navigationController?.popViewController(animated: true)
        }
        
...
