//
//  MuyEmployeesUITests.swift
//  MuyEmployeesUITests
//
//  Created by Daniel Steven Murcia Almanza on 28/08/20.
//  Copyright © 2020 selvamatic. All rights reserved.
//

import XCTest

class MuyEmployeesUITests: XCTestCase {
    
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
    
    func testCreateEmployee() throws{
        
        let app = XCUIApplication()
        app.launch()
        app.navigationBars["Colaboradores"].buttons["plus"].tap()
        let nameField = app.textFields["Nombre"]
        nameField.tap()
        nameField.typeText("Prueba")
        
        let cargoTextField = app.textFields["Cargo"]
        cargoTextField.tap()
        cargoTextField.typeText("Prueba de cargo")
        
        let salarioTextField = app.textFields["Salario"]
        salarioTextField.tap()
        salarioTextField.typeText("1234")
        
        app.toolbars.buttons["Done"].tap()
        
        app.buttons["Añadir"].tap()
        app.staticTexts["Has agregado un nuevo colaborador"].swipeUp()
        
        
        
    }
    
    
}
